Fixed a bug where the variant’s title bar was getting overlayed behind the `Default` button

--- a/src/resources/commerce.css
+++ b/src/resources/commerce.css
@@ -5,6 +5,8 @@
 /* Variant Matrix styles */
 .variant-matrixblock { padding: 0; }
 .variant-matrixblock > .titlebar { margin: 0; width: 100%; }
+body.ltr .variant-matrixblock > .titlebar { padding-right: 140px; }
+body.rtl .variant-matrixblock > .titlebar { padding-left: 140px; }
 .variant-matrixblock > .actions > .default-btn { display: inline-block; margin: -1px 7px; border-radius: 3px; padding: 0 4px; width: auto !important; height: auto !important; font-size: 11px; text-transform: uppercase; color: hsl(212, 10%, 75%); text-decoration: none !important; font-weight: bold; border: 1px solid rgba(0,0,0,0.25); }
 .variant-matrixblock > .actions > .default-btn:not(.sel):hover { border-color: hsl(212, 90%, 50%); }
 .variant-matrixblock > .actions > .default-btn.sel { color: #eef0f1; background: rgba(0,0,0,0.25); background-clip: padding-box; }
